<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <LinearLayout
        android:id="@+id/contentGroup"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/prompt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/find_the_title_and_length_of_movies_with_input_year"
            android:textAlignment="center"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#000000"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/year"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="8dp"
            android:autofillHints=""
            android:backgroundTint="#CCCCCC"
            android:hint="@string/year"
            android:inputType="number"
            android:padding="12dp" />

        <Button
            android:id="@+id/getMovieByYearButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/submit_query" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#DDDDDD"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="32dp" />

        <TextView
            android:id="@+id/promptActor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:layout_marginBottom="8dp"
            android:text="@string/find_movies_acted_by_actor"
            android:textAlignment="center"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#000000"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/actor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="8dp"
            android:autofillHints=""
            android:backgroundTint="#CCCCCC"
            android:hint="@string/actor_name"
            android:inputType="textPersonName"
            android:padding="12dp" />

        <Button
            android:id="@+id/getMoviesByAuthorButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/filter_movies" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#DDDDDD"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="32dp" />

        <TextView
            android:id="@+id/promptChangeMovieLength"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:layout_marginBottom="8dp"
            android:text="@string/change_the_length_of_the_movie_star_wars"
            android:textAlignment="center"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#000000"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/movieLength"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="8dp"
            android:autofillHints=""
            android:backgroundTint="#CCCCCC"
            android:hint="@string/movie_length"
            android:inputType="text|number"
            android:padding="12dp" />

        <Button
            android:id="@+id/updateMovieLengthButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/update_movie_length" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
