<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp">

    <LinearLayout
        android:id="@+id/centerGroup"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_marginHorizontal="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/movieTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textStyle="bold"
            android:gravity="center"
            android:padding="16dp"
            android:background="#EEEEEE" />

        <TextView
            android:id="@+id/movieLength"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/length"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:gravity="center"
            android:padding="12dp"
            android:layout_marginTop="24dp"
            android:background="#F5F5F5" />

        <Button
            android:id="@+id/movieButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/back"
            android:layout_marginTop="24dp"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
